fixed overflow issue that added 4000px to recommendation container

--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,7 @@
 html {
   scroll-behavior: smooth;
   font-size: 1rem;
+  overflow-x: hidden;
 }
 
 body {
@@ -31,10 +32,8 @@ body {
   box-sizing: border-box;
 
   min-height: 100vh;
-  max-width: 100vw;
+  width: 100vw;
   position: relative;
-
-  overflow-x: hidden;
 }
 
 section {
@@ -76,6 +75,9 @@ a {
   left: 0;
   width: 100%;
   z-index: 10;
+
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 .navbar-brand {
@@ -144,7 +146,7 @@ a {
 
 .project {
   background: var(--accent-dark-1);
-  height: 300px;
+  height: 400px;
   width: 100%;
   position: relative;
   grid-column: span 6;
